finish example/06-editor/mdeditor version 1

--- a/example/06-editor/mdeditor/main.css
+++ b/example/06-editor/mdeditor/main.css
@@ -26,6 +26,39 @@
   z-index:1;
 }
 
+/* ------------------ Navigation Bar (Top) ------------------------*/
+
+body {margin: 0;}
+
+ul.topnav {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+ul.topnav li {float: left;}
+
+ul.topnav li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+ul.topnav li a:hover:not(.active) {background-color: #111;}
+
+ul.topnav li a.active {background-color: #4CAF50;}
+
+ul.topnav li.right {float: right;}
+
+@media screen and (max-width: 600px){
+    ul.topnav li.right, 
+    ul.topnav li {float: none;}
+}
+
 /* -----------------  Dropdown Button  (Menu) --------------------*/
 .dropbtn {
 /*  background-color: #ffffff; */
